@@ -16,6 +16,8 @@
 	  how many LogHelper reference them
 	+ Added precondition for Loggerd: it does not run if there isnt
 	anything to watch
+	+ Cron script for manage logs does not run if another is already
+	  running, hope that this will avoid problems with large logs
 1.3.11
 	+ Support customFilter in models for big tables
 	+ Added EBox::Events::sendEvent method to send events using Perl
